# eden

./: .env.example  .gitignore  BOM.md  BUILD.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hardware.md
eden/: __init__.py  __main__.py  config.py  ha.py  loop.py  schema.py
eden/gardener/: agent.py  tools.py
eden/methods/: __init__.py  base.py  dwc.py
esphome/: eden-z1.yaml  eden-zone.yaml
instance/: prompt.md  zones.yaml
instance/profiles/: basil_genovese.yaml
reflex/: eden_zone_guard.blueprint.yaml
tests/: test_agent.py  test_dwc.py  test_loop.py
