[project]
name = "eden"
version = "0.1.0"
description = "An AI-tended hydroponic garden — reusable domain logic for a Claude Gardener agent over Home Assistant."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.104",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eden", "eden.methods", "eden.gardener"]
