[project]
name = "eden"
version = "0.1.0"
description = "An AI-tended hydroponic garden — reusable domain logic for a Claude Gardener agent over Home Assistant."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.104",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eden", "eden.methods", "eden.gardener"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes/pycodestyle errors, isort, pyupgrade, bugbear, flake8-simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
