[project]
name = "eden"
version = "0.1.0"
description = "An AI-tended hydroponic garden — reusable domain logic for a Claude Gardener agent over Home Assistant."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.104",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eden", "eden.methods", "eden.gardener"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes/pycodestyle errors, isort, pyupgrade, bugbear, flake8-simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Pragmatic gate, not --strict: default checks already catch real type bugs.
# The codebase is fully return-annotated; strict def-typing would only force
# churn on structurally-typed `tools` params for no correctness gain.
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
